--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -29,7 +29,7 @@
   },
   "opHiDescription": {
     "description": "Hi explanation",
-    "message": "Leuk dat je deze extensie gebruikt! Als je hem erg handig vindt (en wellicht hebt uitgekeken naar onderstaande instellingen), overweeg dan om een \u003Ca href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=B3DWXL3FAH7DS' target='_blank'>donatie te doen\u003C/a>. Alvast heel erg bedankt!"
+    "message": "Bedankt voor het gebruik van deze extensie."
   },
   "opIcon": {
     "description": "Icon",
